<resources>
    <string name="app_name">Plugs Control Client</string>

    <string name="action_settings">Settings</string>
    <string name="add_plug_button_text">Add</string>
    <string name="delete_plug_button">Delete</string>
    <string name="login_tab_label">Log In</string>
    <string name="signup_tab_label">Sign Up</string>
    <string name="login_button_label">Log In</string>
    <string name="login_username_label">User name:</string>
    <string name="login_password_label">Password:</string>
    <string name="full_name"><![CDATA[Name & Surname:]]></string>
    <string name="create_password">Create password:</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="enter_plug_name">Name of the plug:</string>
    <string name="enter_house_code">House code:</string>
    <string name="enter_switch_code">Switch code:</string>
    <string name="login_ip_label">Host IP:</string>
    <string name="login_port_label">Host Port:</string>
    <string name="logout_menu_label">Log out</string>
    <string name="failed_to_login_message">Failed to login. Please, check your credentials to be correct.</string>
    <string name="failed_to_add_plug_message">Failed to create a new plug. Please, make sure that the plug\'s settings are valid.</string>
</resources>
