<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plugs_control_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/enter_plug_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/new_plug_name"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/enter_house_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_digit_1"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_digit_2"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_digit_3"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_digit_4"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/house_digit_5"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>

    <TextView
        android:text="@string/enter_switch_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_digit_1"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_digit_2"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_digit_3"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_digit_4"
            android:layout_weight="1"
            android:orientation="vertical" />

        <NumberPicker
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_digit_5"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>

    <Spinner
        android:layout_width="wrap_content"
        android:id="@+id/create_plug_spinner"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/add_plug_button_text"
        android:layout_height="wrap_content"
        android:id="@+id/create_plug_from_activity"
        android:textSize="20dp" />

</LinearLayout>